force-app/main/default/objects/Marketing_Event__c/fields/Approved_Count__c.field-meta.xml
<CustomField>
    <fullName>Approved_Count__c</fullName>
    <label>Approved Count</label>
    <type>Summary</type>
    <summaryForeignKey>Event_Invitee__c.Marketing_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <summaryFilterItems>
        <field>Event_Invitee__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
</CustomField>