force-app/main/default/objects/Marketing_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Conference</fullName><default>false</default><label>Conference</label></value>
            <value><fullName>Webinar</fullName><default>false</default><label>Webinar</label></value>
            <value><fullName>Roadshow</fullName><default>false</default><label>Roadshow</label></value>
            <value><fullName>Dinner / Gala</fullName><default>false</default><label>Dinner / Gala</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>