force-app/main/default/objects/Marketing_Event__c/fields/Expected_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Expected_Attendees__c</fullName>
    <label>Expected Attendees</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>