force-app/main/default/objects/Marketing_Event__c/fields/Pending_Count__c.field-meta.xml
<CustomField>
    <fullName>Pending_Count__c</fullName>
    <label>Pending Count</label>
    <type>Summary</type>
    <summaryForeignKey>Event_Invitee__c.Marketing_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <summaryFilterItems>
        <field>Event_Invitee__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </summaryFilterItems>
</CustomField>