force-app/main/default/objects/Marketing_Event__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <description>★R6 What the event is about, and the only field similarity can honestly be computed from — Event_Type__c has three values and says only what shape the event is, so &quot;recommend a similar event&quot; based on it degenerates into &quot;recommend another conference&quot;. THE VALUES BELOW ARE A PLACEHOLDER drawn from the demo data&apos;s financial-services domain; replace them with the real taxonomy before this is used for anything, and back-fill existing events, or every past event looks equally similar to every new one. Multi-select because one event genuinely covers several subjects — with the costs that carries: no roll-up summary, no plain formula reference (only INCLUDES()), and report filtering is &quot;includes&quot; rather than equality.</description>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>Digital Banking</fullName><default>false</default><label>Digital Banking</label></value>
            <value><fullName>Payments</fullName><default>false</default><label>Payments</label></value>
            <value><fullName>Capital Markets</fullName><default>false</default><label>Capital Markets</label></value>
            <value><fullName>Insurance</fullName><default>false</default><label>Insurance</label></value>
            <value><fullName>Risk &amp; Compliance</fullName><default>false</default><label>Risk &amp; Compliance</label></value>
            <value><fullName>Cybersecurity</fullName><default>false</default><label>Cybersecurity</label></value>
            <value><fullName>AI &amp; Data</fullName><default>false</default><label>AI &amp; Data</label></value>
            <value><fullName>Sustainable Finance</fullName><default>false</default><label>Sustainable Finance</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>